Update homepage CSS styling

--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -104,3 +104,12 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
+.hero-images {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
