--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -112,4 +112,20 @@ nav ul li a:hover {
     left: 0;
     z-index: 0;
 }
+.image-slider {
+    display: flex;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+}
 
+.image-slide {
+    min-width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.image-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
