--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -1,3 +1,20 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+}
 
 .logo img {
     width: 50px;
