--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -44,7 +44,7 @@ nav ul li a:hover {
 
 .search-account {
     display: flex;
-    align-items: center;
+    align-items:flex-end;
 }
 
 .search-account input {
