--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -44,7 +44,8 @@ nav ul li a:hover {
 
 .search-account {
     display: flex;
-    margin-right: 15px;
+    margin-top: 10px;
+    margin-right: 30px;
 }
 
 .search-account input {
