Update homepage with aligned email input field

--- a/Biblio_Frontend/css/homepage.css
+++ b/Biblio_Frontend/css/homepage.css
@@ -251,6 +251,8 @@ nav ul li a:hover {
 .email-input {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
+
 }
 
 .email-input input {
