--- a/Frontend/src/components/style.css
+++ b/Frontend/src/components/style.css
@@ -1,23 +1,70 @@
-/* style.css */
-.carousel .slick-slide {
-    height: 100vh; /* Adjust height as needed */
+
+
+.aa {
+  /* background-size: contain; */
+  background-repeat: no-repeat;
+  /* background-position: center; */
+}
+
+  .aa{
+    border-radius: 50px;
   }
   .bg {
     background: url('image7.png') center center fixed;
     background-size: cover;
   }
-  .carousel-slide {
-    background-size: cover;
-    background-position: center;
+  
+  .modal {
+    display: flex;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    align-items: center;
+    justify-content: center;
   }
-  .card {
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .card  {
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.5);
   }
-  
-  .dark .card {
+  .cardd {
+    backdrop-filter: blur(1px);
+    background: rgba(255, 255, 255, 0.5);
+  }
+  .darkk .cardd {
+    background: rgba(133, 112, 98, 0.5);
+  }
+  .dark  .card {
     background: rgba(55, 65, 81, 0.5);
   }
   .auth-section {
@@ -26,15 +73,7 @@
     position: relative;
   }
   
-  .carousel-side {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Keep carousel in the background */
-  }
-  
+ 
   .form-side {
     z-index: 1; /* Keep the form in front */
     display: flex;
