--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1053,16 +1053,16 @@ li .remove-button:hover {
   flex-direction: column;
   align-items: center;
   padding: 40px 0;
-  background-color: #abc5d3;
+  background-color: #f2f4f4;
 }
 
 .author-card {
-  background-color: #e5edf0;
+  background-color: #ececec;
   border-radius: 15px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   width: 90%;
-  max-width: 600px; /* Adjusted static width */
-  height: 500px; /* Static height */
+  max-width: 600px; 
+  height: 500px; 
   margin: 20px auto;
   overflow: hidden;
   display: flex;
@@ -1190,14 +1190,14 @@ li .remove-button:hover {
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #8c9cae, #215e84);
+  background-color:  rgb(247, 248, 250);
   backdrop-filter: blur(5px); /* Blur effect */
   padding: 20px;
 }
 
 .genre-icon {
   font-size: 2rem;
-  color: #fff;
+  color: #fbfcfd;
   margin-bottom: 20px;
 }
 
